# ators

./: .gitignore  AGENTS.md  BENCHMARKS.md  Cargo.toml  LICENSE  TODO.md  pyproject.toml
.github/workflows/: CI.yml  benchmarks.yml
.venv312/: pyvenv.cfg
benchmarks/: README.md  __init__.py  bench_get_descriptor.py  bench_get_untyped.py  bench_init.py  bench_set_untyped.py  bench_set_untyped_alternating.py  bench_typecheck.py  bench_validation.py  conftest.py  run_pyperf.py  test_callable_validation.py  test_get_descriptor.py  test_get_untyped.py  test_init.py  test_set_untyped.py  test_set_untyped_alternating.py  test_typecheck.py
benchmarks/containers/: __init__.py  bench_dict.py  bench_list.py  bench_ordered_dict.py  bench_set.py  test_defaultdict.py  test_dict.py  test_list.py  test_ordered_dict.py  test_set.py
benchmarks/shared/: __init__.py  assignment_registry.py  callable_validation_registry.py  case_registry.py  container_registry.py  descriptor_registry.py  init_registry.py  pyperf_frontend.py  pytest_frontend.py  registry_types.py  runtime.py  typecheck_registry.py  validation_registry.py
benchmarks/validators/: __init__.py  _shared_validation.py  bench_validation_bool.py  bench_validation_bytes.py  bench_validation_complex.py  bench_validation_constrained_int.py  bench_validation_dict.py  bench_validation_fixed_tuple.py  bench_validation_float.py  bench_validation_int.py  bench_validation_list.py  bench_validation_literal.py  bench_validation_optional_int.py  bench_validation_set.py  bench_validation_str.py  bench_validation_tuple.py  test_validation_bool.py  test_validation_bytes.py  test_validation_complex.py  test_validation_constrained_int.py  test_validation_dict.py  test_validation_fixed_tuple.py  test_validation_float.py  test_validation_int.py  test_validation_list.py  test_validation_literal.py  test_validation_optional_int.py  test_validation_set.py  test_validation_str.py  test_validation_tuple.py
docs/source/: conf.py  index.rst  members.rst  usage.rst
python/ators/: __init__.py  _containers.py  _meta.py  behaviors.py  validators.py
python/ators/member/: behaviors.py  validators.py
src/: annotations.rs  callable_validation.rs  class.rs  class_info.rs  containers.rs  core.rs  event.rs  lib.rs  member.rs  meta.rs  observers.rs  ore.rs  shard.rs  utils.rs  validators.rs
src/annotations/: mod.rs
src/class/: base.rs  generic.rs  info.rs  meta.rs
src/containers/: common.rs  dict.rs  list.rs  mod.rs  notifying_list.rs  ordered_dict.rs  set.rs
src/member/: default.rs  delattr.rs  getattr.rs  setattr.rs
src/meta/: mod.rs
src/validators/: coercer.rs  types.rs  values.rs
tests/: conftest.py  test_abstract_collections.py  test_abstract_collections_mutable_restrictions.py  test_abstractmethod.py  test_ators.py  test_callable_validation.py  test_coercion.py  test_containers.py  test_default.py  test_delattr.py  test_events.py  test_freezing.py  test_frozendict.py  test_generic_checks.py  test_init.py  test_member_class_getitem.py  test_notifying_list.py  test_observers.py  test_pickling.py  test_post_getattr.py  test_post_setattr.py  test_pre_getattr.py  test_pre_setattr.py  test_type_validation.py  test_validate_attr.py  test_value_validation.py
tests/static_typing/phase1/: usage.py
tests/unit/phase1/: test_init.py
