[package]
  name    = "ators"
  version = "0.1.0"
  edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
  name       = "ators"
  crate-type = ["cdylib"]

[dependencies]
  pyo3 = "0.26.0"

[profile.release]
  opt-level        = 3
  strip            = "none"
  debug-assertions = false
  overflow-checks  = false
  lto              = true
  panic            = 'unwind'
  incremental      = false
  codegen-units    = 1
  rpath            = false
