[project]
  name = "ators"
  requires-python = ">=3.14"
  license = "BSD-3-Clause"
  license-files = ["LICENSE"]
  authors = [{ name = "Matthieu C. Dartiailh", email = "m.dartiailh@gmail.com" }]
  classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
  ]
  dynamic = ["version"]

[build-system]
  requires      = ["maturin>=1.8,<2.0"]
  build-backend = "maturin"

[tool.maturin]
  module-name   = "ators._ators"
  python-source = "python"
  features      = ["pyo3/extension-module"]
