[project]
  name = "ators"
  requires-python = ">=3.14"
  license = "BSD-3-Clause"
  license-files = ["LICENSE"]
  authors = [{ name = "Matthieu C. Dartiailh", email = "m.dartiailh@gmail.com" }]
  classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
  ]
  dynamic = ["version"]

[dependency-groups]
  test = ["pytest", "pytest-cov"]
  bench = ["pytest", "pytest-benchmark"]
  docs = [
    "pydata-sphinx-theme",
    "sphinx-autoapi",
    "sphinx",
  ]
  lint = ["mypy", "ruff"]
  dev = [
    # Added to allow direct installation of the package in editable mode
    "maturin",
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" },
  ]

[build-system]
  requires      = ["maturin>=1.8,<2.0"]
  build-backend = "maturin"

[tool.maturin]
  module-name   = "ators._ators"
  python-source = "python"
  features      = ["pyo3/extension-module"]

[tool.ruff]
  src         = ["python"]
  line-length = 88

  [tool.ruff.lint]
    select        = ["C", "E", "F", "W", "I", "C90", "RUF"]
    extend-ignore = ["E501", "RUF012"]

    [tool.ruff.lint.isort]
      combine-as-imports = true
      known-first-party  = ["ators"]

    [tool.ruff.lint.mccabe]
      max-complexity = 20

[tool.pytest.ini_options]
  minversion = "6.0"

[tool.coverage]
  [tool.coverage.run]
    branch = true
    source = ["ators"]

  [tool.coverage.report]
    # Regexes for lines to exclude from consideration
    exclude_lines = [
      # Have to re-enable the standard pragma
      "pragma: no cover",

      # Don't complain if tests don't hit defensive assertion code:
      "raise NotImplementedError",
      "pass",

      # Don't complain about abstract methods, they aren't run:
      "@(abc\\.)?abstractmethod",

      # Don't complain about type checking
      "if TYPE_CHECKING:",

      # Don't complain about ellipsis in overload
      "\\.\\.\\.",
    ]
